liblscp - LinuxSampler Control Protocol API
-------------------------------------------

ChangeLog

0.2.4  2004-10-11  Fixed lscp_set_channel_midi_channel() again, MIDI
                   channels should be given in the range 0-15, and omni
                   mode with the LSCP_MIDI_CHANNEL_ALL symbol (16).

0.2.3  2004-09-28  Fixed lscp_set_channel_midi_channel() where MIDI
                   channels should be given in the range 1-16, and
                   omni mode with the new LSCP_MIDI_CHANNEL_ALL
                   symbol (0).
                   
                   Rearrangement on main command requester executive.

0.2.2  2004-07-29  In sync with LSCP document draf (v.12).

                   New functions added: lscp_client_get_events() and
                   lscp_reset_sampler().

                   Added support for generating Debian packages;
                   renamed pkg-config lib name 'liblscp' -> 'lscp' as
                   it's common practice to omit the 'lib' prefix.

0.2.1  2004-07-09  Potential cripling defects habve been fixed.

0.2.0  2004-07-06  New LSCP extension draft (v.11) initial support.
                   (still a work in progress...)

0.1.9  2004-05-18  More fixes for MSVC++ example build.

0.1.8  2004-05-17  Fix for MSVC++ example build; snprintf replaced by
                   buffer overflow friendlier sprintf.

0.1.7  2004-05-10  Missing version.h now included on install; WIN32 is
                   only now conditionally defined.

0.1.6  2004-05-04  WIN32 build support; LPGL disclaimer consistency;
                   versioning functions introduced.

0.1.5  2004-04-26  Server stuff moved into examples.

0.1.4  2004-04-24  Initial auto/libtool preparation.
